--- a/waddle-manager/package.json
+++ b/waddle-manager/package.json
@@ -41,16 +41,18 @@
     "better-sqlite3": "^11.5.0",
     "commander": "^11.1.0",
     "express": "^4.18.2",
-    "winston": "^3.11.0",
-    "zod": "^3.22.4",
     "socket.io": "^4.6.1",
-    "socket.io-client": "^4.6.1"
+    "socket.io-client": "^4.6.1",
+    "uuid": "^11.1.0",
+    "winston": "^3.11.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.8",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.10.5",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.56.0",
