--- a/waddle-manager/package.json
+++ b/waddle-manager/package.json
@@ -52,12 +52,14 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.10.5",
+    "@types/node-fetch": "^2.6.12",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "jest": "^29.7.0",
+    "node-fetch": "^3.3.2",
     "prettier": "^3.1.1",
     "ts-jest": "^29.1.1",
     "tsup": "^8.0.1",
