--- a/waddle-manager/package.json
+++ b/waddle-manager/package.json
@@ -64,6 +64,7 @@
     "node-fetch": "^3.3.2",
     "prettier": "^3.1.1",
     "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3"
   },
