--- a/orchestrator/orchestrator.config.json
+++ b/orchestrator/orchestrator.config.json
@@ -1,10 +1,10 @@
 {
   "pollingInterval": 30000,
   "claudeExecutable": "/Users/gabrielionescu/.claude/local/claude",
-  "workingDirectory": ".",
+  "workingDirectory": "/Users/gabrielionescu/projects/waddle",
   "database": "./orchestrator.db",
   "parallelMode": true,
-  "maxConcurrentManagers": 1,
+  "maxConcurrentManagers": 2,
   "agents": {
     "manager": { "model": "sonnet" },
     "architect": { "model": "opus" },
