Fix single manager agent to handle bugs and review items properly
- Added bug handling rules to single manager prompt
- Added assign_bug_buster case to single manager switch statement
- Fixed priority order to match main manager (Bugs > Stories > Epics)
- This ensures items in review status get processed correctly

--- a/orchestrator/orchestrator.config.json
+++ b/orchestrator/orchestrator.config.json
@@ -5,10 +5,20 @@
   "database": "./orchestrator.db",
   "parallelMode": true,
   "maxConcurrentManagers": 2,
+  "maxConcurrentDevelopers": 1,
   "agents": {
     "manager": { "model": "sonnet" },
     "architect": { "model": "opus" },
     "developer": { "model": "opus" },
     "code_quality_reviewer": { "model": "sonnet" }
+  },
+  "logging": {
+    "level": "INFO",
+    "logToFile": true,
+    "logToConsole": true,
+    "logFilePath": "./logs/orchestrator.log",
+    "includeTimestamp": true,
+    "includeStackTrace": true,
+    "maxFileSize": 100
   }
 }
