Implement epic quality validation to prevent test epics
- Added project vision context to manager prompts
- Added epic quality validation rules to reject test/demo/simulation epics
- Added reject_epic action to both manager agents
- Updated prompts to validate epics before assigning to architect
- Manually rejected existing test epics in database
- Test epics now marked as done with rejection reason in history

This ensures only product-oriented epics that contribute to Waddle's vision are processed.

--- a/orchestrator/orchestrator.config.json
+++ b/orchestrator/orchestrator.config.json
@@ -6,6 +6,7 @@
   "parallelMode": true,
   "maxConcurrentManagers": 2,
   "maxConcurrentDevelopers": 1,
+  "maxBufferMB": 200,
   "agents": {
     "manager": { "model": "sonnet" },
     "architect": { "model": "opus" },
