Implement historical context injection for AI agents
- Create context retrieval system with ContextManager to fetch relevant work history
- Implement sophisticated relevance scoring algorithm to rank context by importance
- Enhance all agent prompt builders to support historical context injection
- Add configurable limits for context size to prevent prompt bloat
- Optimize performance with in-memory caching and efficient database queries
- Implement A/B testing capability to measure impact of context on agent performance
- Add comprehensive tests and demo script for context injection system
- Update orchestrator config with context injection settings

This feature enables agents to learn from past experiences and make better-informed decisions by providing relevant historical context in their prompts.

--- a/orchestrator/orchestrator.config.json
+++ b/orchestrator/orchestrator.config.json
@@ -5,7 +5,7 @@
   "database": "./orchestrator.db",
   "parallelMode": true,
   "maxConcurrentManagers": 1,
-  "maxConcurrentDevelopers": 1,
+  "maxConcurrentDevelopers": 2,
   "maxBufferMB": 200,
   "agents": {
     "manager": { "model": "sonnet" },
@@ -21,5 +21,14 @@
     "includeTimestamp": true,
     "includeStackTrace": true,
     "maxFileSize": 100
+  },
+  "enableHistoricalContext": true,
+  "maxContextLength": 2000,
+  "contextLookbackHours": 168,
+  "contextCacheTTLMinutes": 15,
+  "abTesting": {
+    "enabled": false,
+    "contextEnabledPercent": 50,
+    "seed": 42
   }
 }
