--- a/orchestrator/package.json
+++ b/orchestrator/package.json
@@ -16,17 +16,23 @@
     "start:debug": "DEBUG=true tsx src/orchestrator/index.ts",
     "start:parallel": "PARALLEL_MODE=true tsx src/orchestrator/index.ts",
     "start:single": "PARALLEL_MODE=false tsx src/orchestrator/index.ts",
-    "demo:context-injection": "tsx scripts/demo-context-injection.ts"
+    "demo:context-injection": "tsx scripts/demo-context-injection.ts",
+    "query-knowledge": "tsx scripts/query-knowledge.ts",
+    "trace-decision": "tsx scripts/trace-decision.ts"
   },
   "keywords": ["orchestrator", "autonomous", "development"],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "better-sqlite3": "^11.6.0"
+    "better-sqlite3": "^11.6.0",
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.8",
     "@types/node": "^20.10.5",
+    "@types/express": "^4.17.21",
+    "@types/cors": "^2.8.17",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   }
