--- a/orchestrator/package.json
+++ b/orchestrator/package.json
@@ -18,7 +18,10 @@
     "start:single": "PARALLEL_MODE=false tsx src/orchestrator/index.ts",
     "demo:context-injection": "tsx scripts/demo-context-injection.ts",
     "query-knowledge": "tsx scripts/query-knowledge.ts",
-    "trace-decision": "tsx scripts/trace-decision.ts"
+    "trace-decision": "tsx scripts/trace-decision.ts",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage"
   },
   "keywords": [
     "orchestrator",
@@ -37,7 +40,9 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.23",
     "@types/node": "^20.10.5",
+    "@vitest/ui": "^3.2.4",
     "tsx": "^4.7.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^3.2.4"
   }
 }
