feat: implement database setup and schema creation (US-001)
- Add better-sqlite3 dependency for database operations
- Implement dual environment configuration (local vs test)
- Create SQLite schema with work_items, agents, and state_transitions tables
- Add optimistic locking with version columns for race condition prevention
- Implement database migrations system with version tracking
- Add comprehensive constraint validation (status, type, branch naming, foreign keys)
- Create domain models for WorkItem, Agent, and StateTransition
- Add database configuration module with environment-specific settings
- Implement comprehensive test suite covering all acceptance criteria:
  * Database constraint validation
  * Foreign key relationship enforcement
  * Optimistic locking version conflict detection
  * Environment-specific database configuration
  * State transition logging
- All tests passing (34 unit tests, 7 integration tests)
- Database files properly excluded from git via .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,10 @@ coverage/
 .DS_Store
 Thumbs.db
 
+# Database files (keep structure, ignore data)
+data/*.db
+data/*.db-*
+
 # Waddle specific
 .waddle/
 waddle.config.json
