--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:all": "npm run test:unit && npm run test:integration"
   },
   "dependencies": {
+    "better-sqlite3": "^12.2.0",
     "express": "^4.18.2"
   },
   "engines": {
