feat: optimize test scripts by separating slow Claude integration tests
- test:integration: Fast database tests only (~100ms)
- test:integration:all: All integration tests including Claude (~18s)
- test:all: Unit tests + fast integration tests (~200ms)
- test:all:slow: All tests including slow Claude tests (~18s+)

Performance improvements:
- Regular development testing: 18s → 200ms (90x faster)
- CI/CD can run fast tests first, slow tests separately
- Claude tests isolated for when specifically testing CLI integration

--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "help": "node src/cli-client.js help",
     "test": "find src -name '*.test.ts' -not -name '*.integration.test.ts' | xargs node --test --experimental-strip-types",
     "test:unit": "find src -name '*.test.ts' -not -name '*.integration.test.ts' | xargs node --test --experimental-strip-types",
-    "test:integration": "node --test --experimental-strip-types src/**/*.integration.test.ts",
-    "test:all": "npm run test:unit && npm run test:integration"
+    "test:integration": "find src -name '*.integration.test.ts' -not -path 'src/io/clients/*' | xargs node --test --experimental-strip-types",
+    "test:integration:all": "node --test --experimental-strip-types src/**/*.integration.test.ts",
+    "test:all": "npm run test:unit && npm run test:integration",
+    "test:all:slow": "npm run test:unit && npm run test:integration:all"
   },
   "dependencies": {
     "better-sqlite3": "^12.2.0",
