--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "calculate": "node src/cli-client.js calculate",
     "list": "node src/cli-client.js list",
     "help": "node src/cli-client.js help",
-    "test": "find src -name '*.test.ts' -not -name '*.integration.test.ts' | xargs node --test --experimental-strip-types",
-    "test:unit": "find src -name '*.test.ts' -not -name '*.integration.test.ts' | xargs node --test --experimental-strip-types",
-    "test:integration": "find src -name '*.integration.test.ts' -not -path 'src/io/clients/*' | xargs node --test --experimental-strip-types",
-    "test:integration:all": "node --test --experimental-strip-types src/**/*.integration.test.ts",
+    "test": "env NODE_ENV=test find src -name '*.test.ts' -not -name '*.integration.test.ts' | xargs env NODE_ENV=test node --test --experimental-strip-types",
+    "test:unit": "env NODE_ENV=test find src -name '*.test.ts' -not -name '*.integration.test.ts' | xargs env NODE_ENV=test node --test --experimental-strip-types",
+    "test:integration": "env NODE_ENV=test find src -name '*.integration.test.ts' -not -path 'src/io/clients/*' | xargs env NODE_ENV=test node --test --experimental-strip-types",
+    "test:integration:all": "env NODE_ENV=test node --test --experimental-strip-types src/**/*.integration.test.ts",
     "test:all": "npm run test:unit && npm run test:integration",
     "test:all:slow": "npm run test:unit && npm run test:integration:all"
   },
